--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">About</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -33,8 +33,8 @@
 		<div class="row">
 			<div class="col-md-9">
 				<h2>About Me</h2>
-				<img src="assets/images/tumblr_inline_nmmn7wlVbN1rxmvd4_500.gif" class="img-responsive" alt="ピアノ">
-				<p>アジボラ・アイエニと申す詰まらないやつとして存在しております。1993年生まれ、現在２３歳アメリカのシカゴに住んでおります。あまりにもどうするか分からない人間なので、何かを書きたいか全然分かりません（笑）。。。 
+				<img src="assets/images/tumblr_inline_nmmn7wlVbN1rxmvd4_500.gif" class="img-responsive center-block" alt="ピアノ">
+				<p class="lead">アジボラ・アイエニと申す詰まらないやつとして存在しております。1993年生まれ、現在２３歳アメリカのシカゴに住んでおります。あまりにもどうするか分からない人間なので、何かを書きたいか全然分かりません（笑）。。。 
 				
 				<br> 
 				<br>
@@ -43,34 +43,36 @@
 			</div>
 			<div class="col-md-3">
 				<h2>Contact</h2>
+					<div class='row'>
+						<a href='https://github.com/Yorali' target="_blank">
+							<svg aria-hidden="true" class="octicon octicon-mark-github center-block" height="32" version="1.1" viewBox="0 0 16 16" width="32"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+						</a>
+
+						<br>
+
+						<p class="text-center">GitHub</p>
+
+					</div>
 			</div>
 		</div>
 	</div>
 
-
-
-
-	<div class="wrapper">
-			<div class="top">
-				<section class="topbar">
-					<section class="name_box">
-						<div>
-							<h1 class="name">アジボラ・アイエニ</h1>
-						</div>
-					</section>
-					<div class="navigation">
-							<section class="nav_item_1">
-								<a href="index.html">About</a>
-							</section>
-							<section class="nav_item_2">
-								<a href="portfolio.html">Portfolio</a>
-							</section>
-							<section class="nav_item_3">
-								<a href="contact.html">Contact</a>
-							</section>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<section class="footer">
+					<div>
+						<p class="lead">@Copyright Ajibola Ayeni</p>
 					</div>
 				</section>
+
 			</div>
+			<div class="col-md-4"></div>
+		</div>
+	</div>
+
+
 	
 </body>
 </html>
