Having a miserable time of it

--- a/contact.html
+++ b/contact.html
@@ -36,40 +36,38 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-9">
-							<textarea class="form-control" rows="3">
+						<label for="name">お名前</label>
+							<textarea class="form-control name" rows="3">
 								お名前を入力してください
 							</textarea>
-							</div>
 
 						</div>
 					</div>
 				</div>
 
-				<br>
-
 				<div class="container">
 					<div class="row">
 						<div class="col-md-9">
-							<textarea class="form-control" rows="3">
+						<label for="mail">メール</label>
+							<textarea class="form-control mail" rows="3">
 								メールを入力してください
 							</textarea>
 						</div>
 					</div>
 				</div>
 
-				<br>
-
 				<div class="container">
 					<div class="row">
 						<div class="col-md-9">
-							<textarea class="form-control" rows="3">
+						<label for="message">メッセージ</label>
+							<textarea class="form-control message" rows="3">
 								メッセージを書いてください
 							</textarea>
 						</div>
 					</div>
 
 					<br>
-
+					
 					<button type="submit" class="btn btn-primary">送信 / Send</button>
 				</div>
 
