Having a miserable time of it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</button>
 				<p class="navbar-brand">アジボラ・アイエニ</p>
 			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<div>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">About</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
