--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 				</button>
 				<p class="navbar-brand">アジボラ・アイエニ</p>
 			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<div>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html">About</a></li>
 					<li><a href="#">Portfolio</a></li>
@@ -33,22 +33,22 @@
 		<div class="row">
 			<div class="col-md-9">
 				<h2>Portfolio ~Music I enjoy~</h2>
-					<div class="container">
-						<div class="row">
-							<div class="col-md-3">
+					<div class="container .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
+						<div class="row .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
+							<div class="col-md-3 .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
 								<a class="cocoa" href="https://youtu.be/N4kI02naOqk" target="_blank"><img class='img-responsive' src="assets/images/FE3-790x580.jpg" alt="Rei - COCOA"></a>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-3 .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
 								<a class="cascade" href="https://youtu.be/kVSQnsuTs-g?t=25s" target="_blank"><img class='img-responsive' src="assets/images/FE4-790x580.jpg" alt="Animals As Leaders - Ka$cade"></a>
 							</div>
-							<div class="col-md-3">
+							<div class="col-md-3 .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
 								<a class="calling" href="https://youtu.be/TFaO4zdO9QE" target="_blank"><img class='img-responsive' src="assets/images/FE6-790x580.jpg" alt="Vamps - Calling"></a>
 							</div>
 						</div>
 					</div>
 				
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
 				<h2>Contact</h2>
 					<div class='row'>
 						<a href='https://github.com/Yorali' target="_blank">
