--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 				</button>
 				<p class="navbar-brand">アジボラ・アイエニ</p>
 			</div>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<div>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html">About</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
@@ -56,7 +56,7 @@
 					</div>
 				</div>
 
-				<div class="container">
+				<div class="container ">
 					<div class="row">
 						<div class="col-md-9">
 						<label for="message">メッセージ</label>
@@ -72,7 +72,7 @@
 				</div>
 
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 .visible-sm-block .visible-md-block .visible-xs-block .visible-lg-block">
 				<h2>Contact</h2>
 					<div class='row'>
 						<a href='https://github.com/Yorali' target="_blank">
